src/test/ui/issue-46471-1.stderr
error[E0597]: `z` does not live long enough (Ast)
  --> $DIR/issue-46471-1.rs:17:5
   |
16 |         &mut z
   |              - borrow occurs here
17 |     };
   |     ^ `z` dropped here while still borrowed
...
21 | }
   | - borrowed value needs to live until here

error[E0597]: `z` does not live long enough (Mir)
  --> $DIR/issue-46471-1.rs:17:6
   |
16 |         &mut z
   |         ------ borrow occurs here
17 |     };
   |      ^ `z` dropped here while still borrowed
...
21 | }
   | - borrowed value needs to live until here

error: aborting due to 2 previous errors

